--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,8 @@
-<!doctype html>
+<!DOCTYPE html>
 <head>
-    <title> b l a n k </title>
+  <title>b l a n k</title>
 </head>
 
 <body>
-   <canvas id="cnv_element"></canvas>
-   <script src="script.js"></script>
+  This is Spike's website!!
 </body>
