--- a/public/index.html
+++ b/public/index.html
@@ -27,37 +27,37 @@ body
   <body>
     <div class="row">
       <div class="image-container">
-        <img id="T1" src="901.jpg" alt="jiro" height="200" width="200" />
+        <img id="T1" src="910.png" alt="jiro" height="200" width="200" />
       </div>
       <div class="image-container">
-        <img id="T2" src="802.jpg" alt="jiro" height="200" width="200" />
+        <img id="T2" src="920.png" alt="jiro" height="200" width="200" />
       </div>
       <div class="image-container">
-        <img id="T3" src="703.jpg" alt="jiro" height="200" width="200" />
-      </div>
-    </div>
-
-    <div class="row">
-      <div class="image-container">
-        <img id="T4" src="604.jpg" alt="jiro" height="200" width="200" />
-      </div>
-      <div class="image-container">
-        <img id="T5" src="505.jpg" alt="jiro" height="200" width="200" />
-      </div>
-      <div class="image-container">
-        <img id="T6" src="406.jpg" alt="jiro" height="200" width="200" />
+        <img id="T3" src="930.png" alt="jiro" height="200" width="200" />
       </div>
     </div>
 
     <div class="row">
       <div class="image-container">
-        <img id="T7" src="307.jpg" alt="jiro" height="200" width="200" />
+        <img id="T4" src="940.png" alt="jiro" height="200" width="200" />
       </div>
       <div class="image-container">
-        <img id="T8" src="208.jpg" alt="jiro" height="200" width="200" />
+        <img id="T5" src="950.png" alt="jiro" height="200" width="200" />
       </div>
       <div class="image-container">
-        <img id="T9" src="109.jpg" alt="jiro" height="200" width="200" />
+        <img id="T6" src="960.png" alt="jiro" height="200" width="200" />
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="image-container">
+        <img id="T7" src="970.png" alt="jiro" height="200" width="200" />
+      </div>
+      <div class="image-container">
+        <img id="T8" src="980.png" alt="jiro" height="200" width="200" />
+      </div>
+      <div class="image-container">
+        <img id="T9" src="990.png" alt="jiro" height="200" width="200" />
       </div>
     </div>
   </body>
@@ -67,31 +67,63 @@ body
   const t1_audio = new Audio("D1.mp3");
   T1.onpointerdown = () => {
     t1_audio.play();
-    t1.src = "802.jpg";
-    setTimeout(() => (t1.src = "901.jpg"), 1000);
+    t1.src = "91.png";
+    setTimeout(() => (t1.src = "910.png"), 1000);
   };
   const t2 = document.getElementById("T2");
   const t2_audio = new Audio("D2.mp3");
-  T2.onpointerdown = () => t2_audio.play();
+  T2.onpointerdown = () => {
+    t2_audio.play();
+    t2.src = "92.png";
+    setTimeout(() => (t2.src = "920.png"), 1000);
+  };
   const t3 = document.getElementById("T3");
   const t3_audio = new Audio("D3.mp3");
-  T3.onpointerdown = () => t3_audio.play();
+  T3.onpointerdown = () => {
+    t3_audio.play();
+    t3.src = "93.png";
+    setTimeout(() => (t3.src = "930.png"), 1000);
+  };
   const t4 = document.getElementById("T4");
   const t4_audio = new Audio("D4.mp3");
-  T4.onpointerdown = () => t4_audio.play();
+  T4.onpointerdown = () =>{
+    t4_audio.play();
+    t4.src = "94.png";
+    setTimeout(() => (t4.src = "940.png"), 1000);
+  }
   const t5 = document.getElementById("T5");
   const t5_audio = new Audio("D5.mp3");
-  T5.onpointerdown = () => t5_audio.play();
+  T5.onpointerdown = () =>{
+     t5_audio.play();
+     t5.src = "95.png";
+     setTimeout(() => (t5.src = "950.png"), 1000);
+  }
   const t6 = document.getElementById("T6");
   const t6_audio = new Audio("D6.mp3");
-  T6.onpointerdown = () => t6_audio.play();
+  T6.onpointerdown = () =>{
+     t6_audio.play();
+     t6.src = "96.png";
+     setTimeout(() => (t6.src = "960.png"), 1000)
+  }
   const t7 = document.getElementById("T7");
   const t7_audio = new Audio("D7.mp3");
-  T7.onpointerdown = () => t7_audio.play();
+  T7.onpointerdown = () =>{
+     t7_audio.play();
+     t7.src = "97.png";
+     setTimeout(() => (t7.src = "970.png"), 1000)
+  }
   const t8 = document.getElementById("T8");
   const t8_audio = new Audio("D8.mp3");
-  T8.onpointerdown = () => t8_audio.play();
+  T8.onpointerdown = () =>{
+     t8_audio.play();
+     t8.src = "98.png";
+     setTimeout(() => (t8.src = "980.png"), 1000)
+  }
   const t9 = document.getElementById("T9");
   const t9_audio = new Audio("D9.mp3");
-  T9.onpointerdown = () => t9_audio.play();
+  T9.onpointerdown = () =>{
+     t9_audio.play();
+     t9.src = "99.png";
+     setTimeout(() => (t9.src = "990.png"), 1000)
+  }
 </script>
